<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KeeNotes</string>
    <string name="nav_note">Note</string>
    <string name="nav_review">Review</string>
    <string name="nav_settings">Settings</string>
    <string name="hint_note_input">Write your note here…\nAll content will be encrypted before leaving your device.</string>
    <string name="btn_save">Save Note</string>
    <string name="hint_search">Search notes…</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="settings_endpoint">Endpoint URL</string>
    <string name="settings_token">Token</string>
    <string name="settings_password">Encryption Password</string>
    <string name="settings_password_confirm">Confirm Password</string>
    <string name="settings_save">Save</string>
    <string name="review_period_7">7 days</string>
    <string name="review_period_30">30 days</string>
    <string name="review_period_90">90 days</string>
    <string name="review_period_all">All</string>
    <string name="copyright">©2025 王福强(Fuqiang Wang) All Rights Reserved</string>
    <string name="website">https://keenotes.afoo.me</string>
    <string name="overview_total_notes">Total Notes</string>
    <string name="overview_days_using">Days Using</string>
    <string name="overview_show_card">Show Overview Card</string>
    <string name="settings_on_this_day_in_years_past">On this day in years past</string>
    <string name="copied">Copied</string>
    <string name="search_notes">Search notes</string>
    <string name="on_this_day_title">On this day in years past</string>
    <string name="on_this_day_count">%1$d note(s) from past years</string>
    <string name="on_this_day_empty">No notes from this day in past years yet.</string>
    <string name="on_this_day_disabled">On this day in years past is turned off in Settings.</string>
    <string name="go_back">Go back</string>
    <string name="enlarge_note">Enlarge note</string>
    <string name="share_note">Share note</string>
    <string name="revise_note">Revise as new note</string>
    <string name="shrink_note">Shrink note</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="overwrite_current_draft_title">Overwrite current draft?</string>
    <string name="overwrite_current_draft_message">Current input text will be replaced. The original note will not change.</string>
    <string name="overwrite">Overwrite</string>
    <string name="debug_mock_on_this_day">Mock On This Day</string>
</resources>
